--- a/list-2-3.html
+++ b/list-2-3.html
@@ -53,7 +53,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <!--默认使用极速内核：针对国内浏览器产商-->
 <meta name="renderer" content="webkit">
-<title>继续教育_第2页_&nbsp;|&nbsp;老林笔记</title>
+<title>继续教育_第3页_&nbsp;|&nbsp;老林笔记</title>
 <meta name="keywords" content="林继,小学,数学,语文,继续教育,公需课,专业课,选修课" />
 <meta name="description" content="本人是一位农村教师，2001年从韶关学院毕业，一直在本村教书。在教书的同时，一直在自学计算机技术，略有所成，在镇里经常帮助教办处理各类事务，给老师们代学各类学时培训。在广东范围内，需要代学的同行们可以找我。微信：15816122881" />
 <link href="/assets/qblog/style.css" rel="stylesheet" type="text/css" />
@@ -344,121 +344,122 @@ document.body.addEventListener('input', POWERMODE);
 <div id="wrap">   <div id="content">
     <div id="main">
 	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 59 篇</span></div>	    	 
-      <div id="log-940" class="post_list">
-	  <a href="/b2/940.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/940.html"><center"><div style="height: 260px;overflow: hidden;"><img src="/assets/file/2024/07/2024072501.webp" style="max-width:100%;"></div></center></div>	  
+      <div id="log-833" class="post_list">
+	  <a href="/b2/833.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">关于发布2023年度广东省专业技术人员继续教育公需科目学习指南的通知</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/833.html"><p>围绕国家和省委省政府经济社会高质量发展的部署要求，结合我省继续教育工作实际，经研究和论证，我省2023年度专业技术人员继续教育公需科目确定为“中国式现代化”和“高质量发展”两个课题。2023年度全省专业技术人员继续教育公需课学习任务按30学时计算，专业技术人员从2个专题中任意选择1个学满30学时，均可认定为完成当年度的公需科目学习任务。</p></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-07-25 通过网页 
+	  <p class="time">2023-02-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(875) <a href="/b2/940.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1020) <a href="/b2/833.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-939" class="post_list">
-	  <a href="/b2/939.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024年暑假教师研修</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/939.html"><img src="/assets/file/2024/07/2024072003.webp" style="max-width:100%;"></a></div>	  
+      <div id="log-829" class="post_list">
+	  <a href="/b2/829.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">广东省教育厅关于开展2023年广东省科技劳动教育暨学生信息素养提升实践活动线上培训的通知</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/829.html"><img src="/assets/file/2023/02/2023021902.webp" style="max-width:100%;"></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-07-21 通过网页 
+	  <p class="time">2023-02-19 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(856) <a href="/b2/939.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1059) <a href="/b2/829.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-899" class="post_list">
-	  <a href="/b2/899.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024年寒假教师研修</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/899.html"><img src="/assets/file/2024/02/2024020101.webp" style="max-width:100%;"></a></div>	  
+      <div id="log-827" class="post_list">
+	  <a href="/b2/827.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（100分）【雷州市】世行贷款“班班通”培训知识测试答案</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/827.html"><img src="/assets/file/2023/02/2023021901.webp" style="max-width:100%;"></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-02-01 通过网页 
+	  <p class="time">2023-02-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(948) <a href="/b2/899.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2510) <a href="/b2/827.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-888" class="post_list">
-	  <a href="/b2/888.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023雷州小学及学前教师职务培训</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/888.html"><div style="height: auto;overflow: hidden;"><center><img src="/assets/file/2024/03/20240310215224.webp" width="100%" height="auto"></center></div></div>	  
-	  </div>	
-	  <div class="meta">
-	  <p class="time">2024-01-10 通过网页 
-	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(565) <a href="/b2/888.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
-	 
-	</p></div></div> 
-	 
-      <div id="log-880" class="post_list">
+      <div id="log-822" class="post_list">
 	        <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/880.html"><p>【通知】各中心小学、市直小学、相关学校：湛江市小学数学教学质量提升系列活动一一教师培训的项目，培训时间：2023年12月20日（8：50分开始，时间一天。），培训地点：雷州市第一中学（高中部）报告厅。</p>
-<p>（驱车前来的参训老师，可以把车停在地下停车场。）</p>
-<p style="text-align: right;">雷州市教师发展中心<br>
-2023年12月11日</p></div>	  
+	  	  <div class="textPost" data-url="/b2/822.html">【通知】各中学、中心小学、市直校（园）：2022年公需课学习截止时间为2023年4月30日，以后平台不再提供补学服务。但截至2023年2月13日，全市还有1737位教师一直没有登录平台参加学习。由于继续教育学时涉及到教师资格证的“五年一审”，请各校务必高度重视此项工作，及时督促教师（特别是刚在继教平台系统录入个人信息的2021年新入职教师）登录广东省教师继续教育信息管理平台（https://jsglpt.gdedu.gov.cn/login.jsp）完成学习任务，确保2022年每名教师培训学时不少于90学时（公需课30学时、专业课42学时、选修课18学时）。【雷州市教师发展中心2023.02.13】</div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-12-20 通过网页 
+	  <p class="time">2023-02-13 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(658) <a href="/b2/880.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(772) <a href="/b2/822.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-872" class="post_list">
-	  <a href="/b2/872.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">第十五届小学数学优质课观摩研讨活动 (8学时)</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/872.html"><img src="/assets/file/2023/10/20231027.webp" style="max-width:100%;"></div>	  
+      <div id="log-810" class="post_list">
+	  <a href="/b2/810.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">心理健康教育教师培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/810.html"><img src="/assets/file/2023/01/心理健康教育教师培训/20230115.webp" style="max-width:100%;"></a></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-10-27 通过网页 
+	  <p class="time">2023-01-15 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(634) <a href="/b2/872.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1194) <a href="/b2/810.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-864" class="post_list">
-	  <a href="/b2/864.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">关于开展2023年雷州市小学教师全员轮训的通知</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/864.html">遵循过程考评与总结考评相结合原则，学员考核总成绩=过程性评价（60 分）+总结性评价（40 分），70 分合格（合格才能录入学时）。<br>
-<img src="/assets/file/2023/07/20230713029.webp" style="max-width:100%;"></div>	  
+      <div id="log-807" class="post_list">
+	  <a href="/b2/807.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023年“寒假教师研修”专题</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/807.html"><img src="/assets/file/2023/01/2023年“寒假教师研修”专题/2023010501.webp" style="max-width:100%;"></a></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-07-13 通过网页 
+	  <p class="time">2023-01-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1056) <a href="/b2/864.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2687) <a href="/b2/807.html#comments"><i class="iconfont icon-com"></i> 评论(1)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-860" class="post_list">
-	  <a href="/b2/860.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023年“暑期教师研修”专题</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/860.html"><center><img src="/assets/file/2023/07/20230713005652.webp" style="max-width:100%;"></center></div>	  
+      <div id="log-806" class="post_list">
+	  <a href="/b2/806.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">雷州市教研员素养提升培训项目</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/806.html"><center><img src="/assets/file/2023/01/雷州市教研员素养提升培训项目/2023010501.webp" style="max-width:100%;"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-06-06 通过网页 
+	  <p class="time">2023-01-06 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1695) <a href="/b2/860.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(868) <a href="/b2/806.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-857" class="post_list">
-	  <a href="/b2/857.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/857.html"><center"><img src="/assets/file/2023/07/20230713011840.webp" style="max-width:100%;"></center></div>	  
+      <div id="log-785" class="post_list">
+	  <a href="/b2/785.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">小盒老师研修学时证书</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/785.html"><center><img src="/assets/file/2023/07/小盒研讨社/湛江市义务教育阶段小初衔接数学教学研讨活动.webp" style="max-width:100%;"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-05-16 通过网页 
+	  <p class="time">2022-11-22 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1665) <a href="/b2/857.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1254) <a href="/b2/785.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-848" class="post_list">
-	        <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/848.html">@所有人【通知】各中学、中心小学、市直校（园）：2022年公需课学习截止时间为2023年4月30日，以后平台不再提供补学服务！但截至2023年4月2日，全市还有一千多位教师一直没有登录平台参加学习。由于继续教育学时涉及到教师资格证的“五年一审”，请各校务必高度重视此项工作，及时将本通知转发给各位教师，提醒未参加学习的教师登录广东省教师继续教育信息管理平台（https://jsglpt.gdedu.gov.cn/login.jsp）完成学习任务，确保2022年每名教师培训学时不少于90学时（公需课30学时、专业课42学时、选修课18学时）。【雷州市教师发展中心2023.04.02】                          </div>	  
+      <div id="log-782" class="post_list">
+	  <a href="/b2/782.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2022年广东省义务教育道德与法治、语文、历史学科线上培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/782.html">各学校：
+    下文是广东省教研院开展的义务教育道法、语文、历史学科线上培训的通知，请各学校务必认真组织相应学科教师按照培训文件时间节点参加线上培训。
+
+<div style="clear: both; border-left: 0pt solid rgb(214, 192, 148); width: 100%;"><div style="background-color: rgb(230, 238, 247); border-bottom: 1px dashed rgb(64, 138, 183) ! important; color: rgb(63, 103, 165); font-weight: bold; padding: 5px;"><i class="fas fa-download"></i> 下载文件 </div><div style="border-color: -moz-use-text-color rgb(230, 238, 247) rgb(230, 238, 247); color: #000; border-style: none solid solid; border-width: 0pt 1px 1px;color: #E6EEF7;  padding: 10px;"><span style="color:#000">关于开展2022年广东省义务教育道德与法治、语文、历史学科教研员线上培训的通知.pdf</span></div></div></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-04-02 通过网页 
+	  <p class="time">2022-11-13 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(829) <a href="/b2/848.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1019) <a href="/b2/782.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+	 
+	</p></div></div> 
+	 
+      <div id="log-775" class="post_list">
+	  <a href="/b2/775.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">教师信息技术应用能力提升工程2.0培训 终于完成第三阶段</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/775.html">经过一个多月的准备，整校验收已经提交，只能自评75分，能做的已经做了，希望能过关。<br>
+
+<div style="height: 412px;overflow: hidden;"><center><img src="/assets/file/2022/10/2022102501.webp" style="max-width:100%;"></center></div></div>	  
+	  </div>	
+	  <div class="meta">
+	  <p class="time">2022-10-28 通过网页 
+	  	  	  	  </p>
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(881) <a href="/b2/775.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
-		<span class="info"> 共计：59 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-1.html'>&lt;</a><a href='list-2-1.html'>1</a><span class="current">2</span><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-3.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
+		<span class="info"> 共计：59 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-2.html'>&lt;</a><a href='list-2-1.html'>1</a><a href='list-2-2.html'>2</a><span class="current">3</span><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-4.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
     </div> 
 	<div id="sidebar"> 
      <div class="sidebar">
@@ -1056,6 +1057,12 @@ jQuery(document).ready(function($){
         // 遍历所有img元素，为它们设置lazy加载属性
         images.forEach(img => {
             img.setAttribute('loading', 'lazy');
+        });
+    });
+</script></div>
+
+</body>
+</html>ading', 'lazy');
         });
     });
 </script></div>
