--- a/list-2-4.html
+++ b/list-2-4.html
@@ -53,7 +53,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <!--默认使用极速内核：针对国内浏览器产商-->
 <meta name="renderer" content="webkit">
-<title>继续教育_第2页_&nbsp;|&nbsp;老林笔记</title>
+<title>继续教育_第4页_&nbsp;|&nbsp;老林笔记</title>
 <meta name="keywords" content="林继,小学,数学,语文,继续教育,公需课,专业课,选修课" />
 <meta name="description" content="本人是一位农村教师，2001年从韶关学院毕业，一直在本村教书。在教书的同时，一直在自学计算机技术，略有所成，在镇里经常帮助教办处理各类事务，给老师们代学各类学时培训。在广东范围内，需要代学的同行们可以找我。微信：15816122881" />
 <link href="/assets/qblog/style.css" rel="stylesheet" type="text/css" />
@@ -344,121 +344,123 @@ document.body.addEventListener('input', POWERMODE);
 <div id="wrap">   <div id="content">
     <div id="main">
 	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 59 篇</span></div>	    	 
-      <div id="log-940" class="post_list">
-	  <a href="/b2/940.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/940.html"><center"><div style="height: 260px;overflow: hidden;"><img src="/assets/file/2024/07/2024072501.webp" style="max-width:100%;"></div></center></div>	  
+      <div id="log-764" class="post_list">
+	  <a href="/b2/764.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">希沃学苑能力认证证书</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/764.html"><div style="height: 412px;overflow: hidden;"><center><img src="/assets/file/2023/01/希沃学苑能力认证证书/20221014.webp" style="max-width:100%;"></center></div></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-07-25 通过网页 
+	  <p class="time">2022-10-11 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(875) <a href="/b2/940.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2622) <a href="/b2/764.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-939" class="post_list">
-	  <a href="/b2/939.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024年暑假教师研修</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/939.html"><img src="/assets/file/2024/07/2024072003.webp" style="max-width:100%;"></a></div>	  
-	  </div>	
-	  <div class="meta">
-	  <p class="time">2024-07-21 通过网页 
-	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(856) <a href="/b2/939.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
-	 
-	</p></div></div> 
-	 
-      <div id="log-899" class="post_list">
-	  <a href="/b2/899.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024年寒假教师研修</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/899.html"><img src="/assets/file/2024/02/2024020101.webp" style="max-width:100%;"></a></div>	  
-	  </div>	
-	  <div class="meta">
-	  <p class="time">2024-02-01 通过网页 
-	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(948) <a href="/b2/899.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
-	 
-	</p></div></div> 
-	 
-      <div id="log-888" class="post_list">
-	  <a href="/b2/888.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023雷州小学及学前教师职务培训</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/888.html"><div style="height: auto;overflow: hidden;"><center><img src="/assets/file/2024/03/20240310215224.webp" width="100%" height="auto"></center></div></div>	  
-	  </div>	
-	  <div class="meta">
-	  <p class="time">2024-01-10 通过网页 
-	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(565) <a href="/b2/888.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
-	 
-	</p></div></div> 
-	 
-      <div id="log-880" class="post_list">
+      <div id="log-763" class="post_list">
 	        <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/880.html"><p>【通知】各中心小学、市直小学、相关学校：湛江市小学数学教学质量提升系列活动一一教师培训的项目，培训时间：2023年12月20日（8：50分开始，时间一天。），培训地点：雷州市第一中学（高中部）报告厅。</p>
-<p>（驱车前来的参训老师，可以把车停在地下停车场。）</p>
-<p style="text-align: right;">雷州市教师发展中心<br>
-2023年12月11日</p></div>	  
+	  	  <div class="textPost" data-url="/b2/763.html">@所有人【温馨提示】请相关学校校组织教师参加2022年版义务教育课程方案和课程标准培训活动，特别是要督促2022年选修学时未达标（18学时）的教师全员参与。2022年我市小学阶段不再安排职务培训，小学教师参加“2022年暑期教师研修活动（10学时）”及“2022年版义务教育课程方案和课程标准培训活（8学时）”两项培训可获得选修课18学时，届时由雷州市教师发展中心在继教平台中为获得学时证明的教师申报专业学时。烦请各校务必要求学时未达标的教师全员参加培训，确保所有教师“每年继续教育学时达到90学时以上（其中公需课30学时，专业课42学时，选修课18学时）”，以免影响教师资格证的“五年一审”。【雷州市教师发展中心2022.09.29】</div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-12-20 通过网页 
+	  <p class="time">2022-10-08 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(658) <a href="/b2/880.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1091) <a href="/b2/763.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-872" class="post_list">
-	  <a href="/b2/872.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">第十五届小学数学优质课观摩研讨活动 (8学时)</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/872.html"><img src="/assets/file/2023/10/20231027.webp" style="max-width:100%;"></div>	  
+      <div id="log-761" class="post_list">
+	  <a href="/b2/761.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">广东省义务教育课程方案和课程标准(2022 年版)线上培训证书</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/761.html"><img src="/assets/file/2022/09/2022092301.jpg" style="max-width:100%;"></a></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-10-27 通过网页 
+	  <p class="time">2022-09-23 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(634) <a href="/b2/872.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1836) <a href="/b2/761.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-864" class="post_list">
-	  <a href="/b2/864.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">关于开展2023年雷州市小学教师全员轮训的通知</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/864.html">遵循过程考评与总结考评相结合原则，学员考核总成绩=过程性评价（60 分）+总结性评价（40 分），70 分合格（合格才能录入学时）。<br>
-<img src="/assets/file/2023/07/20230713029.webp" style="max-width:100%;"></div>	  
+      <div id="log-749" class="post_list">
+	  <a href="/b2/749.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2022年“暑期教师研修”专题</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/749.html"><img src="/assets/file/2022/08/20220809225452.jpg" style="max-width:100%;"></a></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-07-13 通过网页 
+	  <p class="time">2022-08-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1056) <a href="/b2/864.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1307) <a href="/b2/749.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-860" class="post_list">
-	  <a href="/b2/860.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023年“暑期教师研修”专题</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/860.html"><center><img src="/assets/file/2023/07/20230713005652.webp" style="max-width:100%;"></center></div>	  
+      <div id="log-734" class="post_list">
+	  <a href="/b2/734.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2022广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/734.html">学习时间：2022年4月11日—12月30日<br>
+
+考试时间：2022年6月1日—7月10日<br><br>
+
+1、学员可通过互联网登录广东省国家工作人员学法考试系统：<a href="http://xfks-study.gdsf.gov.cn" target="_blank">http://xfks-study.gdsf.gov.cn</a>（不要使用ie浏览器）或关注“广东普法”微信公众号进行学考。学员账号：本学员手机号码，初始密码：xfks1234。（学员密码重置请联系本单位管理员，单位密码重置，请联系同级普法办）<br><br>
+
+2、学习一个课件可获得0.5学分，练习题需全部回答正确才可以获得1学分，可以反复做练习题，但不强制要求完成，也可学习其它课件获取学分；累计完成40学分的学员，方可进入考场，参加年度学法考试。平台自动计算，未完成40学分的学员，不能进入考场。（考试期间不影响学员继续获取学分）</div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-06-06 通过网页 
+	  <p class="time">2022-05-29 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1695) <a href="/b2/860.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4004) <a href="/b2/734.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-857" class="post_list">
-	  <a href="/b2/857.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/857.html"><center"><img src="/assets/file/2023/07/20230713011840.webp" style="max-width:100%;"></center></div>	  
+      <div id="log-718" class="post_list">
+	  <a href="/b2/718.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（结业证书）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/718.html">林继老师参加了由广东教育厅举办的世行贷款村小、教学点教师全科教学能力提升培训项目，其中集中面授64天，网络研修100学时，总培训时数484学时，经综合考核成绩合格，准予结业，特发此证。（证书编号：4408000092021313230495）岭南师范学院，2021年12月30日。<br><img src="/assets/file/2022/02/2022022202.webp" style="max-width:100%;"></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-05-16 通过网页 
+	  <p class="time">2022-01-22 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1665) <a href="/b2/857.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2340) <a href="/b2/718.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-848" class="post_list">
-	        <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/848.html">@所有人【通知】各中学、中心小学、市直校（园）：2022年公需课学习截止时间为2023年4月30日，以后平台不再提供补学服务！但截至2023年4月2日，全市还有一千多位教师一直没有登录平台参加学习。由于继续教育学时涉及到教师资格证的“五年一审”，请各校务必高度重视此项工作，及时将本通知转发给各位教师，提醒未参加学习的教师登录广东省教师继续教育信息管理平台（https://jsglpt.gdedu.gov.cn/login.jsp）完成学习任务，确保2022年每名教师培训学时不少于90学时（公需课30学时、专业课42学时、选修课18学时）。【雷州市教师发展中心2023.04.02】                          </div>	  
+      <div id="log-717" class="post_list">
+	  <a href="/b2/717.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第三阶段 美篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/717.html"><center><img src="/assets/file/2022/01/2021世行项目/美篇/3.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-04-02 通过网页 
+	  <p class="time">2022-01-10 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(829) <a href="/b2/848.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1847) <a href="/b2/717.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+	 
+	</p></div></div> 
+	 
+      <div id="log-716" class="post_list">
+	  <a href="/b2/716.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第二阶段 美篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/716.html"><center><img src="/assets/file/2022/01/2021世行项目/美篇/2.webp"   width="100%"    height="auto"></center></div>	  
+	  </div>	
+	  <div class="meta">
+	  <p class="time">2022-01-10 通过网页 
+	  	  	  	  </p>
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1858) <a href="/b2/716.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+	 
+	</p></div></div> 
+	 
+      <div id="log-715" class="post_list">
+	  <a href="/b2/715.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第一阶段 美篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/715.html"><center><img src="/assets/file/2022/01/2021世行项目/美篇/1.webp"   width="100%"    height="auto"></center></div>	  
+	  </div>	
+	  <div class="meta">
+	  <p class="time">2022-01-10 通过网页 
+	  	  	  	  </p>
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1984) <a href="/b2/715.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+	 
+	</p></div></div> 
+	 
+      <div id="log-714" class="post_list">
+	  <a href="/b2/714.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第三阶段 图片篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/714.html"><center><img src="/assets/file/2022/01/2021世行项目/图片/第三阶段/da/44.webp"   width="100%"    height="auto"></center></div>	  
+	  </div>	
+	  <div class="meta">
+	  <p class="time">2022-01-09 通过网页 
+	  	  	  	  </p>
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1822) <a href="/b2/714.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
-		<span class="info"> 共计：59 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-1.html'>&lt;</a><a href='list-2-1.html'>1</a><span class="current">2</span><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-3.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
+		<span class="info"> 共计：59 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-3.html'>&lt;</a><a href='list-2-1.html'>1</a><a href='list-2-2.html'>2</a><a href='list-2-3.html'>3</a><span class="current">4</span><a href='list-2-5.html'>5</a><a href='list-2-6.html'>6</a><a href='list-2-5.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
     </div> 
 	<div id="sidebar"> 
      <div class="sidebar">
@@ -1056,6 +1058,12 @@ jQuery(document).ready(function($){
         // 遍历所有img元素，为它们设置lazy加载属性
         images.forEach(img => {
             img.setAttribute('loading', 'lazy');
+        });
+    });
+</script></div>
+
+</body>
+</html>ading', 'lazy');
         });
     });
 </script></div>
