--- a/list-2-5.html
+++ b/list-2-5.html
@@ -53,7 +53,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <!--默认使用极速内核：针对国内浏览器产商-->
 <meta name="renderer" content="webkit">
-<title>继续教育_第2页_&nbsp;|&nbsp;老林笔记</title>
+<title>继续教育_第5页_&nbsp;|&nbsp;老林笔记</title>
 <meta name="keywords" content="林继,小学,数学,语文,继续教育,公需课,专业课,选修课" />
 <meta name="description" content="本人是一位农村教师，2001年从韶关学院毕业，一直在本村教书。在教书的同时，一直在自学计算机技术，略有所成，在镇里经常帮助教办处理各类事务，给老师们代学各类学时培训。在广东范围内，需要代学的同行们可以找我。微信：15816122881" />
 <link href="/assets/qblog/style.css" rel="stylesheet" type="text/css" />
@@ -344,121 +344,133 @@ document.body.addEventListener('input', POWERMODE);
 <div id="wrap">   <div id="content">
     <div id="main">
 	<div class="class"><i class="fa fa-folder-open"></i><span style="padding-left: 10px;">继续教育</span><span style="padding-left: 10px;">共 59 篇</span></div>	    	 
-      <div id="log-940" class="post_list">
-	  <a href="/b2/940.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/940.html"><center"><div style="height: 260px;overflow: hidden;"><img src="/assets/file/2024/07/2024072501.webp" style="max-width:100%;"></div></center></div>	  
+      <div id="log-713" class="post_list">
+	  <a href="/b2/713.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第二阶段 图片篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/713.html"><center><img src="/assets/file/2022/01/2021世行项目/图片/第二阶段/da/11.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-07-25 通过网页 
+	  <p class="time">2022-01-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(875) <a href="/b2/940.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1992) <a href="/b2/713.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-939" class="post_list">
-	  <a href="/b2/939.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024年暑假教师研修</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/939.html"><img src="/assets/file/2024/07/2024072003.webp" style="max-width:100%;"></a></div>	  
+      <div id="log-712" class="post_list">
+	  <a href="/b2/712.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">（第一阶段 图片篇）2021年世行贷款村小、教学点教师全科教学能力提升培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/712.html"><center><img src="/assets/file/2022/01/2021世行项目/图片/第一阶段/da/36.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-07-21 通过网页 
+	  <p class="time">2022-01-09 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(856) <a href="/b2/939.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1703) <a href="/b2/712.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-899" class="post_list">
-	  <a href="/b2/899.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2024年寒假教师研修</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/899.html"><img src="/assets/file/2024/02/2024020101.webp" style="max-width:100%;"></a></div>	  
+      <div id="log-707" class="post_list">
+	  <a href="/b2/707.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年世行贷款村小、教学点教师全科教学能力提升培训班跟岗研修总结</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/707.html"><p style="text-indent:40px;">由岭南师范学院广东省中小学教师发展中心承担的2021年度世行贷款：村小、教学点教师全科教学能力提升培训的项目，于2021年11月7日至28日在湛江市、珠海市开展第三阶段的跟岗实践等学习。在湛江市跟岗学习期间住宿于湛江市远扬城市酒店（赤坎店），第一周在湛江市第十九小学跟岗学习；第二周在湛江市实验小学跟岗学习。第三周到珠海市跟岗学习。</p></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-02-01 通过网页 
+	  <p class="time">2021-11-26 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(948) <a href="/b2/899.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2118) <a href="/b2/707.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-888" class="post_list">
-	  <a href="/b2/888.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023雷州小学及学前教师职务培训</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/888.html"><div style="height: auto;overflow: hidden;"><center><img src="/assets/file/2024/03/20240310215224.webp" width="100%" height="auto"></center></div></div>	  
+      <div id="log-706" class="post_list">
+	  <a href="/b2/706.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年世行贷款村小、教学点教师全科教学能力提升培训学时证明</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/706.html"><img src="/assets/file/2021/09/网络研修/6班-林继.jpg" style="max-width:100%;"></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2024-01-10 通过网页 
+	  <p class="time">2021-09-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(565) <a href="/b2/888.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2607) <a href="/b2/706.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-880" class="post_list">
-	        <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/880.html"><p>【通知】各中心小学、市直小学、相关学校：湛江市小学数学教学质量提升系列活动一一教师培训的项目，培训时间：2023年12月20日（8：50分开始，时间一天。），培训地点：雷州市第一中学（高中部）报告厅。</p>
-<p>（驱车前来的参训老师，可以把车停在地下停车场。）</p>
-<p style="text-align: right;">雷州市教师发展中心<br>
-2023年12月11日</p></div>	  
+      <div id="log-705" class="post_list">
+	  <a href="/b2/705.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">粤教翔云数字教材应用平台线上培训</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/705.html"><div style="height: 412px;overflow: hidden;"><img src="/assets/file/2023/10/粤教翔云数字教材应用平台/2023111602.webp" style="max-width:100%;"></div></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-12-20 通过网页 
+	  <p class="time">2021-09-14 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(658) <a href="/b2/880.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2870) <a href="/b2/705.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-872" class="post_list">
-	  <a href="/b2/872.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">第十五届小学数学优质课观摩研讨活动 (8学时)</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/872.html"><img src="/assets/file/2023/10/20231027.webp" style="max-width:100%;"></div>	  
+      <div id="log-698" class="post_list">
+	  <a href="/b2/698.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年公需课考试答案</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/698.html"><center><img src="/assets/file/2021/06/2021061005.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-10-27 通过网页 
+	  <p class="time">2021-07-30 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(634) <a href="/b2/872.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3541) <a href="/b2/698.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-864" class="post_list">
-	  <a href="/b2/864.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">关于开展2023年雷州市小学教师全员轮训的通知</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/864.html">遵循过程考评与总结考评相结合原则，学员考核总成绩=过程性评价（60 分）+总结性评价（40 分），70 分合格（合格才能录入学时）。<br>
-<img src="/assets/file/2023/07/20230713029.webp" style="max-width:100%;"></div>	  
+      <div id="log-694" class="post_list">
+	  <a href="/b2/694.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">致全体教师的一封信</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/694.html"><div style="padding:-50px; font-family: 'Microsoft YaHei'; font-size: 16px; line-height:30px;">
+		<p>
+			亲爱的老师：
+		</p>
+		<p style="text-indent:30px;">
+			大家好！按照《关于做好2021年我省专业技术人员继续教育工作的通知》要求，做好专业人员继续教育是贯彻落实习近平总书记关于人才工作的重要论述和省委省政府人才工作部署的重要举措，也是各位教师开拓新视野，学习新知识和提升竞争力的重要路径。
+		</p>
+</div></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-07-13 通过网页 
+	  <p class="time">2021-07-23 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1056) <a href="/b2/864.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2749) <a href="/b2/694.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-860" class="post_list">
-	  <a href="/b2/860.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023年“暑期教师研修”专题</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/860.html"><center><img src="/assets/file/2023/07/20230713005652.webp" style="max-width:100%;"></center></div>	  
+      <div id="log-668" class="post_list">
+	  <a href="/b2/668.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021华医公需课</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/668.html"><center><img src="/assets/file/2021/06/2021年公需课/2021062202.webp"   width="100%"    height="auto"></center></div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-06-06 通过网页 
+	  <p class="time">2021-06-22 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1695) <a href="/b2/860.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(2538) <a href="/b2/668.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-857" class="post_list">
-	  <a href="/b2/857.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2023广东省国家工作人员学法考试</h2></a>      <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/857.html"><center"><img src="/assets/file/2023/07/20230713011840.webp" style="max-width:100%;"></center></div>	  
+      <div id="log-666" class="post_list">
+	  <a href="/b2/666.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年教育系统公需课学习帐号与密码说明</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/666.html">更新于 2021.06.19 08:29<br>
+<strong>帐号密码的说明：</strong>（大小写、数字、特殊符号）<br>
+1、帐号是个人身体证号码，身份证号有字母需大写。<br>
+2、默认密码为个人<strong style="color: red;">身份证号码后六位@Gd</strong>，例如A教师身份证号码是440882198007081324，那么密码为：081324@Gd。<br>
+<strong>注：</strong><br>
+1、根据广东省教育厅相关文件要求，凡是用户账号连续输入密码错误次数超过3次，则账号自动锁定15分钟，如超过3个月未登录，账号会被锁定需学校管理员重置密码；<br>
+2、学校管理员的账户（帐号开头的字母是SchoolAdmin），初始密码是<strong style="color: red;">账号最后6位加@GdXX</strong>，如果不对，需联系单位所属教育局重置密码或请提供一份重置密码的申请，申请内容包括：单位全称及地址、法定代表人姓名、联系电话、学校登录账号、申请事项及原因并盖单位公章，以便核实身份的,申请可以拍照发到给广东二师在线客服。</div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-05-16 通过网页 
+	  <p class="time">2021-06-19 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1665) <a href="/b2/857.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(8865) <a href="/b2/666.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
-      <div id="log-848" class="post_list">
-	        <div class="excerpt">
-	  	  <div class="textPost" data-url="/b2/848.html">@所有人【通知】各中学、中心小学、市直校（园）：2022年公需课学习截止时间为2023年4月30日，以后平台不再提供补学服务！但截至2023年4月2日，全市还有一千多位教师一直没有登录平台参加学习。由于继续教育学时涉及到教师资格证的“五年一审”，请各校务必高度重视此项工作，及时将本通知转发给各位教师，提醒未参加学习的教师登录广东省教师继续教育信息管理平台（https://jsglpt.gdedu.gov.cn/login.jsp）完成学习任务，确保2022年每名教师培训学时不少于90学时（公需课30学时、专业课42学时、选修课18学时）。【雷州市教师发展中心2023.04.02】                          </div>	  
+      <div id="log-663" class="post_list">
+	  <a href="/b2/663.html"><h2 style="border-bottom: 1px dashed #e0e0e0;line-height: 1.5em;font-weight: bold;font-size: 20px;">2021年度广东省国家工作人员学法考试通知</h2></a>      <div class="excerpt">
+	  	  <div class="textPost" data-url="/b2/663.html">学习时间:2021年5月25日-12月30日。考试时间:2021年6月1日-7月5日。<br><br>
+1、学员可通过互联网登录广东省国家工作人员学法考试系统<a href="http://xfks-study.gdsf.gov.cn/" target="_blank">http://xfks-study.gdsf.gov.cn/</a>或关注“广东普法”微信公众号进行学考。学员账号:本学员手机号码，初始密码:xfks1234。(学员密码重置请联系本单位管理员)<br><br>
+2、学习一个课件可获得0.5学分，练习题需全部回答正确才可以获得1学分，可以反复做练习题，但不是强制要求完成，也可学习其它课件获取学分;累计完成40学分的学员，方可进入考场，参加年度学法考试。平台自动计算，未完成40学分的学员，不能进入考场。(考试期间不影响学员继续获取学分)<br><br>
+3、考试成绩为百分制，60分(含)以上为及格、90分(含)以上为优秀:本次考试共设3个考场，学员可任意选择一个考场进入考试，对考试成绩不满意的学员可进入其他考场再次参考每人共有3次机会，成结以高分覆盖低分，取最高分为最终成绩，7月5日截止考试，系统自动关闭考场，此后学员不能进入考场参加考试。</div>	  
 	  </div>	
 	  <div class="meta">
-	  <p class="time">2023-04-02 通过网页 
+	  <p class="time">2021-06-04 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(829) <a href="/b2/848.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3745) <a href="/b2/663.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
-		<span class="info"> 共计：59 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-1.html'>&lt;</a><a href='list-2-1.html'>1</a><span class="current">2</span><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><a href='list-2-5.html'>5</a><a href='list-2-3.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
+		<span class="info"> 共计：59 条记录 每页:10条</span><a href='list-2-1.html'>首页</a><a href='list-2-4.html'>&lt;</a><a href='list-2-1.html'>1</a><a href='list-2-2.html'>2</a><a href='list-2-3.html'>3</a><a href='list-2-4.html'>4</a><span class="current">5</span><a href='list-2-6.html'>6</a><a href='list-2-6.html'>&gt;</a><a href='list-2-6.html'>尾页</a>	</div>
     </div> 
 	<div id="sidebar"> 
      <div class="sidebar">
@@ -1056,6 +1068,12 @@ jQuery(document).ready(function($){
         // 遍历所有img元素，为它们设置lazy加载属性
         images.forEach(img => {
             img.setAttribute('loading', 'lazy');
+        });
+    });
+</script></div>
+
+</body>
+</html>ading', 'lazy');
         });
     });
 </script></div>
