--- a/list-2.html
+++ b/list-2.html
@@ -507,7 +507,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2020-04-18 通过网页 
 	  <span class="ico">顶</span>	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6816323) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6816619) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
 	 
 	</p></div></div> 
 	 
@@ -518,7 +518,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-01-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(421) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(423) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -532,7 +532,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-12-12 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(556) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(559) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -548,7 +548,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-11-25 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(458) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(462) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -559,7 +559,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-09-05 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(747) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(750) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -570,7 +570,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(655) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(656) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -581,7 +581,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(950) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(952) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -592,7 +592,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(651) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(654) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -603,7 +603,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-17 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3572) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(3576) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -614,7 +614,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-16 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1020) <a href="/b2/942.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1021) <a href="/b2/942.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
@@ -1216,6 +1216,12 @@ jQuery(document).ready(function($){
         // 遍历所有img元素，为它们设置lazy加载属性
         images.forEach(img => {
             img.setAttribute('loading', 'lazy');
+        });
+    });
+</script></div>
+
+</body>
+</html>ading', 'lazy');
         });
     });
 </script></div>
